# Bootcamp-Agent

./: .dockerignore  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  SECURITY.md  demo_run.txt  install.cmd  install.ps1  install.sh  main.py  pyproject.toml  requirements-bot.txt  requirements-browser.txt  requirements.txt  tests_offline.py  uninstall.sh
.github/: FUNDING.yml  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  question.md
.github/workflows/: ci.yml  docker.yml
app/: __init__.py  banner.py  config.py  cost.py  exceptions.py  highlight.py  history.py  llm.py  logger.py  monitor.py  plugins.py  ratelimit.py  sandbox.py  schema.py  setup.py  spinner.py  store.py
app/agent/: base.py  bootcamp.py  multi.py  react.py  toolcall.py
app/prompt/: __init__.py  bootcamp.py  supervisor.py  toolcall.py
app/tool/: __init__.py  ask_human.py  base.py  bash.py  browser.py  create_chat_completion.py  image_generation.py  integration_loader.py  integrations.py  python_execute.py  str_replace_editor.py  terminate.py  (+4 more)
bot/: README.md  run_bot.py
config/: config.example.toml
scripts/: demo_cli.py  install_anim.py  make_banner.py  make_demo_gif.py  make_install_gif.py  make_screenshot.py  make_welcome_shot.py
tests/: __init__.py  conftest.py  test_bot.py  test_config.py  test_cost.py  test_highlight.py  test_history.py  test_integrations.py  test_llm_retry.py  test_monitor.py  test_plugins.py  test_ratelimit.py  test_sandbox.py  test_spinner.py  test_termux.py
workspace/: .gitkeep
(+2 files in other folders)
